--- a/about.html
+++ b/about.html
@@ -23,6 +23,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Custom Theme files -->
     <link href="css/style.css" rel='stylesheet' type='text/css'/>
     <script src="js/jquery.min.js"></script>
+	<script> 
+		$(function(){
+		  $("#loadheader").load("header.html"); 
+		  $("#loadfooter").load("footer.html"); 
+		});
+	</script> 
     <!--web-fonts-->
     <link href='//fonts.googleapis.com/css?family=Lobster|Raleway:500,400,300' rel='stylesheet' type='text/css'>
     <!--//we-bfonts-->
@@ -37,40 +43,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             });
         });
     </script>
+	
 
 </head>
 <body>
 <!--start-header-->
-<div id="home" class="header two">
-    <div class="top-header">
-        <div class="container">
-            <div class="logo">
-                <a href="index.html"><h1>Pet<span>sy</span></h1></a>
-            </div>
-            <div class="top-menu">
-                <span class="menu"> </span>
-                <ul class="cl-effect-16">
-                    <li><a href="index.html" data-hover="Accueil">Accueil</a></li>
-                    <li><a class="active" href="about.html" data-hover="Présentation">Présentation</a></li>
-                    <li><a href="services.html" data-hover="Services">Services</a></li>
-                    <li><a href="gallery.html" data-hover="Galerie">Galerie</a></li>
-                    <li><a href="contact.html" data-hover="Contact">Contact</a></li>
-                    <div class="clearfix"></div>
-                </ul>
-            </div>
-            <!-- script-for-menu -->
-            <script>
-                $("span.menu").click(function () {
-                    $(".top-menu ul").slideToggle("slow", function () {
-                    });
-                });
-            </script>
-            <!-- script-for-menu -->
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</div>
-</div>
+
+<div id="loadheader"></div>
+
 <!--start-about-->
 <div class="about second">
     <div class="container">
@@ -233,27 +213,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </svg>
 <!--//team-->
 <!--footer-->
-<div class="footer text-center">
-    <div class="container">
-        <ul class="social-icons">
-            <li><a class="tooltips" href="#"><img src="images/fb.png" title="facebook"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/twt.png" title="twitter"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/tube.png" title="tube"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/in.png" title="linkedin"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li class="pin"><a class="tooltips" href="#"><img src="images/pin.png" title="pinterest"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <div class="clearfix"></div>
-        </ul>
-        <div class="copy">
-            <p>Copyright &copy; 2015 Petsy. All Rights Reserved. Design by <a href="http://w3layouts.com/">W3layouts</a>
-            </p>
-        </div>
-    </div>
-</div>
+
+<div id="loadfooter"></div>
 
 <!--start-smoth-scrolling-->
 <script type="text/javascript">
