--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Custom Theme files -->
     <link href="css/style.css" rel='stylesheet' type='text/css'/>
     <script src="js/jquery.min.js"></script>
+	<script> 
+		$(function(){		  
+		  $("#loadfooter").load("footer.html"); 
+		});
+	</script> 
     <!--web-fonts-->
     <link href='//fonts.googleapis.com/css?family=Lobster|Raleway:500,400,300' rel='stylesheet' type='text/css'>
     <!--//we-bfonts-->
@@ -218,28 +223,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </svg>
 <!--//end-health-->
 <!--footer-->
-<div class="footer text-center">
-    <div class="container">
-        <ul class="social-icons">
-            <li><a class="tooltips" href="#"><img src="images/fb.png" title="facebook"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/twt.png" title="twitter"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/tube.png" title="tube"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/in.png" title="linkedin"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li class="pin"><a class="tooltips" href="#"><img src="images/pin.png" title="pinterest"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <div class="clearfix"></div>
-        </ul>
-        <div class="copy">
-            <p>Copyright &copy; 2015 Petsy. All Rights Reserved. Design by <a href="http://w3layouts.com/">W3layouts</a>
-            </p>
-        </div>
-    </div>
-</div>
-
+<div id="loadfooter"></div>
 <!--start-smoth-scrolling-->
 <script type="text/javascript">
     $(document).ready(function () {
