mutualisation du footer et header

--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
                 <span class="menu"> </span>
                 <ul class="cl-effect-16">
                     <li><a href="index.html" data-hover="Accueil">Accueil</a></li>
-                    <li><a class="active" href="about.html" data-hover="Présentation">Présentation</a></li>
+                    <li><a href="about.html" data-hover="Présentation">Présentation</a></li>
                     <li><a href="services.html" data-hover="Services">Services</a></li>
                     <li><a href="gallery.html" data-hover="Galerie">Galerie</a></li>
                     <li><a href="contact.html" data-hover="Contact">Contact</a></li>
