--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,11 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Petsy a Animal Category Flat Bootstarp Resposive Website Template | Gallery :: w3layouts</title>
+    <title>Brossage & Bain - Service de toilettage à domicile dans votre région - Equipe experte & qualifiée -
+        Toilettage chiens - Tarifs à petit prix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="Petsy Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
+    <meta name="keywords" content=""/>
     <script type="application/x-javascript"> addEventListener("load", function () {
         setTimeout(hideURLbar, 0);
     }, false);
@@ -82,7 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//swipebox -->
 <div class="gallery">
     <div class="container">
-        <h3 class="tittle">Our Gallery</h3>
+        <h3 class="tittle">Notre galerie</h3>
         <div class="gallery-bottom">
             <div class="col-md-4 gallery-left">
                 <a href="images/g1.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
@@ -142,61 +136,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <path id="trianglePath5" d="M0 0 L50 100 L100 0 Z"></path>
     <path id="trianglePath6" d="M50 100 L100 40 L100 0 Z"></path>
 </svg>
-<!--start-team-->
-<div class="team">
-    <div class="container">
-        <h3 class="tittle two">Meet Our Team</h3>
-        <div class="team-grids">
-            <ul class="ch-grid">
-                <li>
-                    <div class="ch-item ch-img-1">
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-1"></div>
-                                <div class="ch-info-back">
-                                    <h3>Petsy</h3>
-                                    <p>by Ana Villa-Zamora <a href="#">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ch-item ch-img-2">
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-2"></div>
-                                <div class="ch-info-back">
-                                    <h3>Petsy</h3>
-                                    <p>by Arnel Baluyot <a href="#">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ch-item ch-img-3">
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-3"></div>
-                                <div class="ch-info-back">
-                                    <h3>Petsy</h3>
-                                    <p>by Jamal Charanek <a href="#">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-</div>
-<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
-     viewBox="0 0 100 100" preserveAspectRatio="none">
-    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
-    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
-</svg>
 <!--//team-->
 <!--footer-->
 <div class="footer text-center">
@@ -224,17 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--start-smoth-scrolling-->
 <script type="text/javascript">
     $(document).ready(function () {
-        /*
-        var defaults = {
-              containerID: 'toTop', // fading element id
-            containerHoverID: 'toTopHover', // fading element hover id
-            scrollSpeed: 1200,
-            easingType: 'linear'
-         };
-        */
-
         $().UItoTop({easingType: 'easeOutQuart'});
-
     });
 </script>
 <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover"
