--- a/typography.html
+++ b/typography.html
@@ -40,7 +40,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				});
 			});
 </script>
+	<script type="text/javascript" src="tarteaucitron/tarteaucitron.js"></script>
 
+	<script type="text/javascript">
+		tarteaucitron.init({
+			"privacyUrl": "", /* Privacy policy url */
+
+			"hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
+			"cookieName": "tarteaucitron", /* Cookie name */
+
+			"orientation": "top", /* Banner position (top - bottom) */
+			"showAlertSmall": true, /* Show the small banner on bottom right */
+			"cookieslist": true, /* Show the cookie list */
+
+			"adblocker": false, /* Show a Warning if an adblocker is detected */
+			"AcceptAllCta" : true, /* Show the accept all button when highPrivacy on */
+			"highPrivacy": true, /* Disable auto consent */
+			"handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
+
+			"removeCredit": false, /* Remove credit link */
+			"moreInfoLink": true, /* Show more info link */
+			"useExternalCss": false, /* If false, the tarteaucitron.css file will be loaded */
+
+			//"cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for multisite */
+
+			"readmoreLink": "/cookiespolicy" /* Change the default readmore link */
+		});
+	</script>
+
+	<script type="text/javascript">
+		tarteaucitron.user.gajsUa = 'UA-141544468-1';
+		tarteaucitron.user.gajsMore = function () { /* add here your optionnal _ga.push() */ };
+		(tarteaucitron.job = tarteaucitron.job || []).push('gajs');
+	</script>
 </head>
 <body>
 	<!--start-header-->
