boulot sur services

--- a/services.html
+++ b/services.html
@@ -50,47 +50,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div id="loadheader"></div>
 </div>
 <!--start-breed-section-->
-<div class="breed-section">
-    <div class="container">
-        <h3 class="tittle two">Breeding Services</h3>
-        <div class="serve-grids">
-            <div class="col-md-5 service-img">
-                <img src="images/b-service.jpg" class="img-responsive" alt=""/>
-            </div>
-            <div class="col-md-7 serve-text">
-                <h4>Aliquam erat volutpat. Quisque vel tincidunt leo</h4>
-                <p>Femper ultricies eget eget nunc. Sed est sem, mattis a nunc eget, elementum pharetra nunc. Curabitur
-                    sed venenatis lorem, at ultricies turpis. Mauris quam enim, bibendum lobortis mi vitae, congue
-                    suscipit eros. Morbi a quam dui. Sed id scelerisque augue. Fusce gravida vehicula eleifend.
-                    Pellentesque</p>
-                <div class="col-md-6 service-grid">
-                    <ul>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Lorem ipsum dolor sit amet</li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Fusce interdum metus et turpis
-                        </li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Maecenas quis rutrum quam</li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Praesent porttitor congue</li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Praesent porttitor congue</li>
-                    </ul>
-
-                </div>
-                <div class="col-md-6 service-grid">
-                    <ul>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Lorem ipsum dolor sit amet</li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Fusce interdum metus et turpis
-                        </li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Maecenas quis rutrum quam</li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Praesent porttitor congue</li>
-                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Praesent porttitor congue</li>
-                    </ul>
-
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</div>
 <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
      viewBox="0 0 100 100" preserveAspectRatio="none">
     <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
@@ -99,27 +58,48 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//services-->
 <div class="health-care">
     <div class="container">
-        <h3 class="tittle">Your Dog's Health Care</h3>
+        <h3 class="tittle">Toilettage</h3>
         <div class="health">
             <div class="col-md-7 health-text">
-                <h4>Lorem Aliquam erat volutpat. Quisque vel tincidunt leo</h4>
-                <p>Femper ultricies eget eget nunc. Sed est sem, mattis a nunc eget, elementum pharetra nunc. Curabitur
-                    sed venenatis lorem, at ultricies turpis. Mauris quam enim, bibendum lobortis mi vitae, congue
-                    suscipit eros.Fusce gravida vehicula eleifend. Pellentesqu. Morbi a quam dui. Sed id scelerisque
-                    augue. Fusce gravida vehicula eleifend. Pellentesque.</p>
-                <p>Femper ultricies eget eget nunc. Sed est sem, mattis a nunc eget, elementum pharetra nunc. Curabitur
-                    sed venenatis lorem,Mauris quam enim, bibendum lobortis mi vitae, congue suscipit eros. Morbi a quam
-                    dui.Fusce gravida vehicula eleifend. Pellentesqu. Sed id scelerisque augue. Fusce gravida vehicula
-                    eleifend. Pellentesqu.</p>
+                <p>Nous proposons un service de toilettage de chiens à domicile ou dans notre boutique 
+				   Les chiens jouissent d’un service complet de nettoyage et de massage, un shampoing BIO aux extraits naturel de quenche certifié sans gluten est proposé en option (7€). </p>
+                <p>Nos massage et toilettage sont effectués par des vétérinaires certifiés RNCP.</p>
             </div>
             <div class="col-md-5 health-img">
                 <img src="images/food.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
-
         </div>
     </div>
 </div>
+<!--start-breed-section-->
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+<!--//services-->
+<div class="health-care">
+    <div class="container">
+        <h3 class="tittle">Promenades</h3>
+        <div class="health">
+            <div class="col-md-7 health-text">
+                <p>Nous proposons un service qui vous permet de vous délester des promenades obligatoires de votre animal de type canidé. Vous pourrez donc aller boire un verre tranquillement 
+				le soir avec vos collèges sans vous soucier votre état d’ébriété et de l’heure à laquelle vous rentrerez.</p>
+            </div>
+            <div class="col-md-5 health-img">
+                <img src="images/food.jpg" class="img-responsive" alt=""/>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
      viewBox="0 0 100 100" preserveAspectRatio="none">
     <path id="trianglePath3" d="M0 0 L50 100 L100 0 Z"></path>
@@ -128,23 +108,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//end-health-->
 <!--footer-->
 <div id="loadfooter"></div>
-
 <!--start-smoth-scrolling-->
-<script type="text/javascript">
-    $(document).ready(function () {
-        /*
-        var defaults = {
-              containerID: 'toTop', // fading element id
-            containerHoverID: 'toTopHover', // fading element hover id
-            scrollSpeed: 1200,
-            easingType: 'linear'
-         };
-        */
 
-        $().UItoTop({easingType: 'easeOutQuart'});
-
-    });
-</script>
 <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover"
                                                                          style="opacity: 1;"> </span></a>
 
