boulot sur services

--- a/services.html
+++ b/services.html
@@ -128,6 +128,100 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 
+<!--start-breed-section-->
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+<!--//services-->
+<div class="health-care">
+    <div class="container">
+        <h3 class="tittle">Gardiennage</h3>
+        <div class="health">
+            <div class="col-md-7 health-text">
+                <p>Nous proposons un service de gardiennage de chiens, de cette façon vous pouvez partir en vacances sans vous restreindre. 
+				Et c’est toujours mieux de faire cela que d’abandonner votre chien sur une aire d’autoroute !</p>
+            </div>
+            <div class="col-md-5 health-img">
+                <img src="images/food.jpg" class="img-responsive" alt=""/>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+
+
+<!--start-breed-section-->
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+<!--//services-->
+<div class="health-care">
+    <div class="container">
+        <h3 class="tittle">Coach de remise en forme</h3>
+        <div class="health">
+            <div class="col-md-7 health-text">
+                <p>Si votre chien est trop gros et n’arrive plus à suivre votre vélo, il va falloir penser à souscrire à ce service. Votre chien subira un régime et des séances de sport 
+				intensif lors de stages qui durent de 5 jours a 1 mois. Et en plus pendant ce temps vous pouvez partir en vacances.</p>
+            </div>
+            <div class="col-md-5 health-img">
+                <img src="images/food.jpg" class="img-responsive" alt=""/>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+
+
+<!--start-breed-section-->
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+<!--//services-->
+<div class="health-care">
+    <div class="container">
+        <h3 class="tittle">Conseil vétérinaire en consultation</h3>
+        <div class="health">
+            <div class="col-md-7 health-text">
+                <p>Vous pouvez venir en consultations vétérinaire pour recevoir des conseils avisés d’une spécialiste sur des sujets comme l’alimentation et l’éducation. Si vous avez besoin de conseils, contactez-nous !</p>
+            </div>
+            <div class="col-md-5 health-img">
+                <img src="images/food.jpg" class="img-responsive" alt=""/>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+
+
+<!--start-breed-section-->
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+<!--//services-->
+<div class="health-care">
+    <div class="container">
+        <h3 class="tittle">Education</h3>
+        <div class="health">
+            <div class="col-md-7 health-text">
+                <p>Si votre chien aboie sans arrêt et/ou mord les passant voire même vous-même ou votre famille vous pouvez le piquer. 
+				Mais vous pouvez aussi nous le confier afin de lui apprendre le respect, les battes de baseball et teasers adaptés aux chiens seront de la partie ! 
+				Après avoir suivi ce stage votre chien se comportera de manière parfaitement adéquate, et si notre stage ne résout pas le problème, on vous fera une remise de 60% sur l’euthanasie de votre chien.</p>
+            </div>
+            <div class="col-md-5 health-img">
+                <img src="images/food.jpg" class="img-responsive" alt=""/>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
 
 
 
