index et footer

--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
             <div class="clearfix"></div>
         </ul>
         <div class="copy">
-            <p>Copyright NOTRE COPYRIGHT
+            <p>Copyright GarderieToutou
             </p>
         </div>
     </div>
