--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <div class="top-header">
         <div class="container">
             <div class="logo">
-                <a href="index.html"><h1>Pet<span>sy</span></h1></a>
+                <a href="index.html"><h1>Garderie<span>Toutou</span></h1></a>
             </div>
             <div class="top-menu">
                 <span class="menu"> </span>
