boulot sur services (images)

--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <p>Nos massage et toilettage sont effectués par des vétérinaires certifiés RNCP.</p>
             </div>
             <div class="col-md-5 health-img">
-                <img src="images/food.jpg" class="img-responsive" alt=""/>
+                <img src="images/toil.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -120,7 +120,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				le soir avec vos collèges sans vous soucier votre état d’ébriété et de l’heure à laquelle vous rentrerez.</p>
             </div>
             <div class="col-md-5 health-img">
-                <img src="images/food.jpg" class="img-responsive" alt=""/>
+                <img src="images/prome.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -144,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				Et c’est toujours mieux de faire cela que d’abandonner votre chien sur une aire d’autoroute !</p>
             </div>
             <div class="col-md-5 health-img">
-                <img src="images/food.jpg" class="img-responsive" alt=""/>
+                <img src="images/gard.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				intensif lors de stages qui durent de 5 jours a 1 mois. Et en plus pendant ce temps vous pouvez partir en vacances.</p>
             </div>
             <div class="col-md-5 health-img">
-                <img src="images/food.jpg" class="img-responsive" alt=""/>
+                <img src="images/obe.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -191,7 +191,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <p>Vous pouvez venir en consultations vétérinaire pour recevoir des conseils avisés d’une spécialiste sur des sujets comme l’alimentation et l’éducation. Si vous avez besoin de conseils, contactez-nous !</p>
             </div>
             <div class="col-md-5 health-img">
-                <img src="images/food.jpg" class="img-responsive" alt=""/>
+                <img src="images/veto.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -216,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				Après avoir suivi ce stage votre chien se comportera de manière parfaitement adéquate, et si notre stage ne résout pas le problème, on vous fera une remise de 60% sur l’euthanasie de votre chien.</p>
             </div>
             <div class="col-md-5 health-img">
-                <img src="images/food.jpg" class="img-responsive" alt=""/>
+                <img src="images/edu.jpg" class="img-responsive" alt=""/>
             </div>
             <div class="clearfix"></div>
         </div>
