--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
             });
         });
     </script>
-    <script type="text/javascript" src="tarteaucitron/tarteaucitron.js"></script>
+    <script type="text/javascript" src="tarteaucitron.js/tarteaucitron.js"></script>
 
     <script type="text/javascript">
         tarteaucitron.init({
