--- a/about.html
+++ b/about.html
@@ -163,43 +163,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="team-grids">
             <ul class="ch-grid">
                 <li>
-                    <div class="ch-item ch-img-1">
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-1"></div>
+                    <!--div class="ch-item ch-img-1"-->
+                        <!--div class="ch-info-wrap"-->
+                            <!--div class="ch-info"-->
+                                <!--div class="ch-info-front ch-img-1"></div-->
                                 <div class="ch-info-back">
-                                    <h3>Petsy</h3>
-                                    <p>by Ana Villa-Zamora <a href="#">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                                    <h3>André</h3>
+                                    <p>Proche de la retraite, je me suis intéressé aux animaux depuis l’année dernière.
+                                        J’ai rejoint l’équipe Garderie Toutou qui me permet de travailler avec passion à ce qui me plaît le plus aujourd’hui.
+                                        J’aime beaucoup les chiens et c’est pourquoi je me suis proposé en tant que dogsiter au sein de l’entreprise.
+                                        C’est avec plaisir de rendre services aux personnes voulant prendre le service « dogsiting » pour que je puisse m’occuper de leur chien.</p>
+
+                                 </div>
                 </li>
                 <li>
-                    <div class="ch-item ch-img-2">
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-2"></div>
                                 <div class="ch-info-back">
-                                    <h3>Petsy</h3>
-                                    <p>by Arnel Baluyot <a href="#">View on Dribbble</a></p>
+                                    <h3>Anna</h3>
+                                    <p>Je m’appelle Anna, 26 ans, j’ai fait une formation pour apprendre à m’occuper des chiens à merveille.
+                                        Je peux garder votre chien pendant votre absence. Il aura le droit à une toilette régulière, ainsi que des promenades.
+                                        Ayant des compétences en nutrition pour les animaux, je saurais quoi acheter pour bien nourrir votre chien !</p>
+
                                 </div>
-                            </div>
-                        </div>
-                    </div>
                 </li>
                 <li>
-                    <div class="ch-item ch-img-3">
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-3"></div>
+
                                 <div class="ch-info-back">
-                                    <h3>Petsy</h3>
-                                    <p>by Jamal Charanek <a href="#">View on Dribbble</a></p>
+                                    <h3>Jonathan</h3>
+                                    <p>Jérémy, 35 ans, 15 ans que je travaille dans l’univers animalier.
+                                        C’est une énorme opportunité pour moi de pouvoir garder vos chiens en garderie.
+                                        Je suis serviable.
+                                        Je saurais garder vos animaux en sécurité.
+                                        J’ai effectué plusieurs formations pour cela.
+                                        J’ai, de plus, travailler à la SPA qui me permet de connaître comment les animaux doivent être traités. </p>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
+
                 </li>
             </ul>
 
