--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             });
         });
     </script>
-    <script type="text/javascript" src="tarteaucitron.js/tarteaucitron.js"></script>
+    <script type="text/javascript" src="node_modules/tarteaucitronjs/tarteaucitron.js"></script>
 
     <script type="text/javascript">
         tarteaucitron.init({
