--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             });
         });
     </script>
-    <script type="text/javascript" src="tarteaucitron.js/tarteaucitron.js"></script>
+    <script type="text/javascript" src="node_modules/tarteaucitronjs/tarteaucitron.js"></script>
 
     <script type="text/javascript">
         tarteaucitron.init({
