--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             "cookieslist": true, /* Show the cookie list */
 
             "adblocker": false, /* Show a Warning if an adblocker is detected */
-            "AcceptAllCta" : true, /* Show the accept all button when highPrivacy on */
+            "AcceptAllCta": true, /* Show the accept all button when highPrivacy on */
             "highPrivacy": true, /* Disable auto consent */
             "handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
 
@@ -72,7 +72,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <script type="text/javascript">
         tarteaucitron.user.gajsUa = 'UA-141544468-1';
-        tarteaucitron.user.gajsMore = function () { /* add here your optionnal _ga.push() */ };
+        tarteaucitron.user.gajsMore = function () { /* add here your optionnal _ga.push() */
+        };
         (tarteaucitron.job = tarteaucitron.job || []).push('gajs');
     </script>
 </head>
@@ -82,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="top-header">
         <div class="container">
             <div class="logo">
-                <a href="index.html"><h1>Garderie<span> Toutou</span></h1></a>
+                <a href="index.html"><img src="images/logo.png" alt="" width="90" class="img-responsive"/></a>
             </div>
             <div class="top-menu">
                 <span class="menu"> </span>
@@ -156,43 +157,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 });
             </script>
         </div>
-        <div class="banner-bottom">
-            <div class="container">
-                <div class="banner-bot-grids">
-                    <div class="col-md-4 banner-grid one">
-                        <div class="icon">
-                            <i class="glyphicon glyphicon-time"> </i>
-                        </div>
-                        <div class="icon-text">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt dolor et.</p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="col-md-4 banner-grid two">
-                        <div class="icon">
-                            <i class="glyphicon glyphicon-wrench"> </i>
-                        </div>
-                        <div class=" icon-text">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt dolor et.</p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="col-md-4 banner-grid three">
-                        <div class="icon">
-                            <i class="glyphicon glyphicon-briefcase"> </i>
-                        </div>
-                        <div class="icon-text">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt dolor et.</p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
 
     </div>
 </div>
@@ -258,11 +222,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </div>
 <div class="container">
-    <h3 class="tittle">Pourquoi allez à Garderie Toutou ?</h3>
+    <h3 class="tittle">Témoignages</h3>
     <div class="row text-center">
         <div class="col-sm-6 col-md-4">
             <div class="testimonial-box">
-                <img src="https://images.pexels.com/photos/206615/pexels-photo-206615.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" class="img-responsive" alt="" width="90">
+                <img src="https://images.pexels.com/photos/206615/pexels-photo-206615.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                     class="img-responsive" alt="" width="90">
                 <div class="ratings-icons">
                     <span class="glyphicon glyphicon-star"></span>
                     <span class="glyphicon glyphicon-star"></span>
@@ -278,7 +243,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         <div class="col-sm-6 col-md-4">
             <div class="testimonial-box">
-                <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" class="img-responsive" alt="" width="90">
+                <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                     class="img-responsive" alt="" width="90">
                 <div class="ratings-icons">
                     <span class="glyphicon glyphicon-star"></span>
                     <span class="glyphicon glyphicon-star"></span>
@@ -294,7 +260,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         <div class="col-sm-6 col-md-4">
             <div class="testimonial-box">
-                <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" class="img-responsive" alt="" width="90">
+                <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                     class="img-responsive" alt="" width="90">
                 <div class="ratings-icons">
                     <span class="glyphicon glyphicon-star"></span>
                     <span class="glyphicon glyphicon-star"></span>
