--- a/index.html
+++ b/index.html
@@ -221,61 +221,66 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 </div>
-<div class="container">
-    <h3 class="tittle">Témoignages</h3>
-    <div class="row text-center">
-        <div class="col-sm-6 col-md-4">
-            <div class="testimonial-box">
-                <img src="https://images.pexels.com/photos/206615/pexels-photo-206615.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
-                     class="img-responsive" alt="" width="90">
-                <div class="ratings-icons">
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
+<div class="about">
+    <div class="container">
+        <h3 class="tittle">Témoignages</h3>
+        <div class="row text-center">
+            <div class="col-sm-6 col-md-4">
+                <div class="testimonial-box">
+                    <img src="https://images.pexels.com/photos/206615/pexels-photo-206615.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                         class="img-responsive" alt="" width="90">
+                    <div class="ratings-icons">
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                    </div>
+                    <h4>James Baker</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida
+                        et</p>
+
                 </div>
-                <h4>James Baker</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida et</p>
+            </div> <!-- End Col -->
 
-            </div>
-        </div> <!-- End Col -->
+            <div class="col-sm-6 col-md-4">
+                <div class="testimonial-box">
+                    <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                         class="img-responsive" alt="" width="90">
+                    <div class="ratings-icons">
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                    </div>
+                    <h4>Jon Doe</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida
+                        et</p>
 
-        <div class="col-sm-6 col-md-4">
-            <div class="testimonial-box">
-                <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
-                     class="img-responsive" alt="" width="90">
-                <div class="ratings-icons">
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
                 </div>
-                <h4>Jon Doe</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida et</p>
+            </div> <!-- End Col -->
 
-            </div>
-        </div> <!-- End Col -->
+            <div class="col-sm-6 col-md-4">
+                <div class="testimonial-box">
+                    <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                         class="img-responsive" alt="" width="90">
+                    <div class="ratings-icons">
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                    </div>
+                    <h4>Maria Jose</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida
+                        et</p>
 
-        <div class="col-sm-6 col-md-4">
-            <div class="testimonial-box">
-                <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
-                     class="img-responsive" alt="" width="90">
-                <div class="ratings-icons">
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
                 </div>
-                <h4>Maria Jose</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida et</p>
-
-            </div>
-        </div> <!-- End Col -->
+            </div> <!-- End Col -->
 
 
+        </div>
     </div>
 </div>
 <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
