add horraire et hover

--- a/services.html
+++ b/services.html
@@ -218,7 +218,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <div class="container">
     <h3 class="tittle">Nos tarifs</h3>
-    <table class="table" style="width: 35%; margin-left: auto; margin-right: auto; margin-top: 25px">
+    <table class="table table-hover" style="width: 35%; margin-left: auto; margin-right: auto; margin-top: 25px">
         <thead style="background-color: black; color:white;">
           <tr>
             <th scope="col">Service</th>
