--- a/index.html
+++ b/index.html
@@ -221,7 +221,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 </div>
-<div class="about">
+<div class="container" style="margin-top: 45px;">
+    <h3 class="tittle">Nos Horraires</h3>
+    <table class="table table-hover" style="width: 35%; margin-left: auto; margin-right: auto; margin-top: 25px">
+        <thead style="background-color: black; color:white;">
+          <tr>
+            <th scope="col">Jours</th>
+            <th scope="col">Matin</th>
+            <th scope="col">Après-Midi</th>
+          </tr>
+        </thead>
+        <tbody>
+                <tr><td>Lundi</td><td>9h - 12h</td><td>13h - 19h</td></tr>
+                <tr><td>Mardi</td><td>9h - 12h</td><td>13h - 19h</td></tr>
+                <tr><td>Mercredi</td><td>9h - 12h</td><td>13h - 19h</td></tr>
+                <tr><td>Jeudi</td><td>9h - 12h</td><td>13h - 19h</td></tr>
+                <tr><td>Vendredi</td><td>9h - 12h</td><td>13h - 19h</td></tr>
+                <tr><td>Samedi</td><td>9h - 12h</td><td>13h - 19h</td></tr>
+                <tr><td>Dimanche</td><td>9h - 12h</td><td>Fermé</td></tr>
+        </tbody>
+      </table>
+    </div>
+<div class="about" style="background-color: #f6f6f6;">
     <div class="container">
         <h3 class="tittle">Témoignages</h3>
         <div class="row text-center">
