--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--start-team-->
 <div class="find">
     <div class="container">
-        <h3 class="tittle two">Find Us</h3>
+        <h3 class="tittle two">Où somme nous ?</h3>
         <div class="map">
             <div id="map" style="width: 100%; height: 500px;"></div>
             <div>
