--- a/index.html
+++ b/index.html
@@ -257,9 +257,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="glyphicon glyphicon-star"></span>
                         <span class="glyphicon glyphicon-star"></span>
                     </div>
-                    <h4>James Baker</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida
-                        et</p>
+                    <h4>Celia Llorca</h4>
+                    <p>Très professionnel et sérieux, je recommande ! Au top! Merci à vous.</p>
 
                 </div>
             </div> <!-- End Col -->
@@ -275,16 +274,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="glyphicon glyphicon-star"></span>
                         <span class="glyphicon glyphicon-star"></span>
                     </div>
-                    <h4>Jon Doe</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida
-                        et</p>
+                    <h4>Olivia Chiron</h4>
+                    <p>Excellente pet sitter, je vais lui confier une nouvelle fois ma petite puce qu’elle a déjà gardée l’an passé.</p>
 
                 </div>
             </div> <!-- End Col -->
 
             <div class="col-sm-6 col-md-4">
                 <div class="testimonial-box">
-                    <img src="https://images.pexels.com/photos/478544/pexels-photo-478544.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
+                    <img src="images/t1.jpg"
                          class="img-responsive" alt="" width="90">
                     <div class="ratings-icons">
                         <span class="glyphicon glyphicon-star"></span>
@@ -293,9 +291,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="glyphicon glyphicon-star"></span>
                         <span class="glyphicon glyphicon-star"></span>
                     </div>
-                    <h4>Maria Jose</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien augue, dictum et gravida
-                        et</p>
+                    <h4>Claire Sulli</h4>
+                    <p>Un excellent accueil pour les maîtres et un bon felling avec les animaux. Très bon salon de toilettage. Je recommandé ! Tarif très correct</p>
 
                 </div>
             </div> <!-- End Col -->
