--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <h3 class="tittle">Contact</h3>
 
-        <a href="mailto:contact@gardientoutou.net"><button class="btn btn-success">Envoyer un mél</button></a>
+        <a href="mailto:contact@gardientoutou.net"><button class="btn btn-success">Envoyer un mail</button></a>
 
     </div>
 </div>
