ajout d'un text humain

--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="contact">
     <div class="container">
         <h3 class="tittle">Contact</h3>
-
-        <a href="mailto:contact@gardientoutou.net"><button class="btn btn-success">Envoyer un mail</button></a>
+        <p>Si vous avez une question à propos de nos services ou à propos de notre sociéte envoyez un mail !</p> <br>
+        <a href="mailto:contact@gardientoutou.net"><button class="btn btn-success">Envoyez un mail</button></a>
 
     </div>
 </div>
