--- a/gallery.html
+++ b/gallery.html
@@ -91,27 +91,27 @@
         <div class="gallery-bottom">
             <div class="col-md-4 gallery-left">
                 <a href="images/g1.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g1.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g1.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g2.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g2.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g2.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g3.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g3.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g3.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g7.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g7.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g7.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g5.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g5.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g5.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
@@ -121,17 +121,17 @@
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g2.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g2.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g2.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g7.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g7.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g7.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
             <div class="col-md-4 gallery-left">
                 <a href="images/g3.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="Image Title">
-                    <img src="images/g3.jpg" alt="" class="img-responsive zoom-img"/>
+                    <img src="images/g3.jpg" class="img-responsive zoom-img"/>
                 </a>
             </div>
 
