--- a/footer.html
+++ b/footer.html
@@ -1,24 +1,17 @@
 <div class="footer text-center">
     <div class="container">
-        <ul class="cl-effect-16">
+        <ul class="cl-effect-16" style="list-style: none;">
             <li><a class="mentions" href="mention_legales.html" data-hover="Mention légales">Mention légales</a></li>
         </ul>
         <ul class="social-icons">
-            <li><a class="tooltips" href="#"><img src="images/fb.png" title="facebook"/><span>Follow us for all the latest news</span></a>
+            <li><a class="tooltips" href="https://facebook.com/garderie-toutou"><img src="images/fb.png" title="facebook"/><span>Suivez nos actualités !</span></a>
             </li>
-            <li><a class="tooltips" href="#"><img src="images/twt.png" title="twitter"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/tube.png" title="tube"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li><a class="tooltips" href="#"><img src="images/in.png" title="linkedin"/><span>Follow us for all the latest news</span></a>
-            </li>
-            <li class="pin"><a class="tooltips" href="#"><img src="images/pin.png" title="pinterest"/><span>Follow us for all the latest news</span></a>
+            <li><a class="tooltips" href="https://twitter.com/garderie-toutou"><img src="images/twt.png" title="twitter"/><span>Suivez nos actualités !</span></a>
             </li>
             <div class="clearfix"></div>
         </ul>
         <div class="copy">
-            <p>Copyright GarderieToutou
-            </p>
+            <p>Copyright GarderieToutou </p>
         </div>
     </div>
 </div>
