--- a/header.html
+++ b/header.html
@@ -12,7 +12,10 @@
                     <li><a href="services.html" data-hover="Services">Services</a></li>
                     <li><a href="gallery.html" data-hover="Galerie">Galerie</a></li>
                     <li><a href="contact.html" data-hover="Contact">Contact</a></li>
-                    <div class="clearfix"></div>
+                    <li><a class="tooltips" href="#"><img src="images/fb.png" title="facebook"/><span>Follow us for all the latest news</span></a>
+                    </li>
+                    <li><a class="tooltips" href="#"><img src="images/twt.png" title="twitter"/><span>Follow us for all the latest news</span></a>
+                        <div class="clearfix"></div>
                 </ul>
             </div>
             <!-- script-for-menu -->
