--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a href="services.html" data-hover="Services">Services</a></li>
                     <li><a href="gallery.html" data-hover="Galerie">Galerie</a></li>
                     <li><a href="contact.html" data-hover="Contact">Contact</a></li>
-                    <div class="clearfix"></div>
+                    <li><a class="tooltips" href="#"><img src="images/fb.png" title="facebook"/><span>Partager notre site avec votre compte Facebook !</span></a>
+                    </li>
+                    <li><a class="tooltips" href="#"><img src="images/twt.png" title="twitter"/><span>Partager notre site avec votre compte Twitter !</span></a>
+
+                        <div class="clearfix"></div>
                 </ul>
             </div>
             <!-- script-for-menu -->
