--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
 </svg>
 <!--//services-->
-<div class="health-care">
+<div class="health-care" style="background-color: white;">
     <div class="container">
         <h3 class="tittle">Pourquoi allez à Garderie Toutou ?</h3>
         <div class="health">
@@ -187,7 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--start-team-->
 <div class="team">
     <div class="container">
-        <h3 class="tittle two">Meet Our Team</h3>
+        <h3 class="tittle two">Notre Equipe !</h3>
         <div class="team-grids">
             <ul class="ch-grid" style="text-align: center">
                 <div style="vertical-align: top;" class="col-sm-12 col-md-4">
