--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -68,9 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
             "readmoreLink": "/cookiespolicy" /* Change the default readmore link */
         });
-    </script>
 
-    <script type="text/javascript">
         tarteaucitron.user.gajsUa = 'UA-141544468-1';
         tarteaucitron.user.gajsMore = function () { /* add here your optionnal _ga.push() */
         };
@@ -225,6 +217,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 </div>
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+<br><br>
+<br><br>
 <div class="container" style="margin-top: 45px;">
     <h3 class="tittle">Nos Horraires</h3>
     <table class="table table-hover" style="width: 35%; margin-left: auto; margin-right: auto; margin-top: 25px">
@@ -246,7 +245,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </tbody>
       </table>
     </div>
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath5" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath6" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
 <div class="about" style="background-color: #f6f6f6;">
+    <br><br>
+    <br><br>
     <div class="container">
         <h3 class="tittle">Témoignages</h3>
         <div class="row text-center">
