--- a/header.html
+++ b/header.html
@@ -12,9 +12,9 @@
                     <li><a href="services.html" data-hover="Services">Services</a></li>
                     <li><a href="gallery.html" data-hover="Galerie">Galerie</a></li>
                     <li><a href="contact.html" data-hover="Contact">Contact</a></li>
-                    <li><a class="tooltips" href="#"><img src="images/fb.png" title="facebook"/><span>Follow us for all the latest news</span></a>
+                    <li><a class="tooltips2" href="https://www.facebook.com/sharer/sharer.php?u=https://www.garderie.lucasfoussier.fr" target="_blank"><img src="images/fb.png" title="facebook"/><span>Partager notre site avec votre compte Facebook !</span></a>
                     </li>
-                    <li><a class="tooltips" href="#"><img src="images/twt.png" title="twitter"/><span>Follow us for all the latest news</span></a>
+                    <li><a class="tooltips2" href="https://twitter.com/share?url=https://www.garderie.lucasfoussier.fr" target="_blank"><img src="images/twt.png" title="twitter"/><span>Partager notre site avec votre compte Twitter !</span></a>
                         <div class="clearfix"></div>
                 </ul>
             </div>
