Modification du footer pour l'ajout des partenaires

--- a/footer.html
+++ b/footer.html
@@ -4,9 +4,23 @@
             <li><a class="mentions" href="mention_legales.html" data-hover="Mention légales">Mention légales</a></li>
         </ul>
         <ul class="social-icons">
-            <li><a class="tooltips" href="https://facebook.com/garderie-toutou"><img src="images/fb.png" title="facebook"/><span>Suivez nos actualités !</span></a>
+            <li>
+                <a class="tooltips" href="#"><img src="images/ISO_9001.png" width="50px"
+                                                  title="facebook"/><span>Partenaire</span></a>
             </li>
-            <li><a class="tooltips" href="https://twitter.com/garderie-toutou"><img src="images/twt.png" title="twitter"/><span>Suivez nos actualités !</span></a>
+            <li>
+                <a class="tooltips" href="#"><img src="images/dogBuddy.png" width="50px"
+                                                  title="facebook"/><span>Partenaire</span></a>
+            </li>
+            <li>
+                <a class="tooltips" href="#"><img src="images/royalCanin.jpg" width="50px"
+                                                  title="facebook"/><span>Partenaire</span></a>
+            </li>
+            <li><a class="tooltips" href="https://facebook.com/garderie-toutou"><img src="images/fb.png"
+                                                                                     title="facebook"/><span>Suivez nos actualités !</span></a>
+            </li>
+            <li><a class="tooltips" href="https://twitter.com/garderie-toutou"><img src="images/twt.png"
+                                                                                    title="twitter"/><span>Suivez nos actualités !</span></a>
             </li>
             <div class="clearfix"></div>
         </ul>
