Correction d'un membre

--- a/about.html
+++ b/about.html
@@ -201,9 +201,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <img src="images/h1.jpg"
                                          class="img-responsive" alt="" width="90">
                                     </div>
-                                    <i>Proche de la retraite, je me suis intéressé aux animaux depuis l’année dernière.
+                                    <i> Je me suis intéressé aux animaux depuis l’année précédente.
                                         J’ai rejoint l’équipe Garderie Toutou qui me permet de travailler avec passion à ce qui me plaît le plus aujourd’hui.
-                                        J’aime beaucoup les chiens et c’est pourquoi je me suis proposé en tant que dogsiter au sein de l’entreprise.
+                                        J’aime beaucoup les chiens et c’est pourquoi je me suis proposé en tant que dogsiter au sein de la société.
                                         C’est avec plaisir de rendre services aux personnes voulant prendre le service « dogsiting » pour que je puisse m’occuper de leur chien.</i>
                                  </div>
                 </div>
