Modification de la taille des images partenaire

--- a/footer.html
+++ b/footer.html
@@ -5,17 +5,19 @@
         </ul>
         <ul class="social-icons">
             <li>
-                <a class="tooltips" href="#"><img src="images/ISO_9001.png" width="50px"
+                <a class="tooltips" href="#"><img src="images/ISO_9001.png" width="120px"
                                                   title="facebook"/><span>Partenaire</span></a>
             </li>
             <li>
-                <a class="tooltips" href="#"><img src="images/dogBuddy.png" width="50px"
+                <a class="tooltips" href="#"><img src="images/dogBuddy.png" width="120px"
                                                   title="facebook"/><span>Partenaire</span></a>
             </li>
             <li>
-                <a class="tooltips" href="#"><img src="images/royalCanin.jpg" width="50px"
+                <a class="tooltips" href="#"><img src="images/royalCanin.jpg" width="120px"
                                                   title="facebook"/><span>Partenaire</span></a>
             </li>
+        </ul>
+        <ul class="social-icons">
             <li><a class="tooltips" href="https://facebook.com/garderie-toutou"><img src="images/fb.png"
                                                                                      title="facebook"/><span>Suivez nos actualités !</span></a>
             </li>
