display none cookies

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             "cookieName": "tarteaucitron", /* Cookie name */
 
             "orientation": "top", /* Banner position (top - bottom) */
-            "showAlertSmall": true, /* Show the small banner on bottom right */
+            "showAlertSmall": false, /* Show the small banner on bottom right */
             "cookieslist": true, /* Show the cookie list */
 
             "adblocker": false, /* Show a Warning if an adblocker is detected */
