--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
             "cookieName": "tarteaucitron", /* Cookie name */
 
             "orientation": "top", /* Banner position (top - bottom) */
-            "showAlertSmall": true, /* Show the small banner on bottom right */
+            "showAlertSmall": false, /* Show the small banner on bottom right */
             "cookieslist": true, /* Show the cookie list */
 
             "adblocker": false, /* Show a Warning if an adblocker is detected */
